# Photo-Gallery

./: .gitignore  Cargo.toml  README.md  process.md
src/: app_commands.rs  app_data.rs  data.rs  image_widget.rs  main.rs  scroll.rs  scroll_component.rs  view.rs  widget.rs
src/folder_view/: data.rs  mod.rs  views.rs
src/main_view/: data.rs  mod.rs  view.rs
src/widgets/: button.rs  mod.rs  scroll.rs  scroll_component.rs
