[package]
name = "image-viewer"
version = "0.3.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "de5f88a"
features = ["im"]

[dependencies]
druid-navigator = { git = "https://github.com/arthmis/druid-navigator", branch="main"}
druid-gridview = { git = "https://github.com/arthmis/druid-gridview", branch="master"}
druid-widget-nursery= { git= "https://github.com/linebender/druid-widget-nursery" }
image = "0.23"
walkdir = "2"
log = "0.4.13"

[profile.dev]
opt-level = 1